@@ -382,6 +382,9 @@ Changes since 1.5.1
 - iPhone unit tests now print "Test Case '-[TEST SELECTOR]' started." before
   each test.
 
+- Added GTMTypeCasting.h which gives you safer objective-c casts based on
+  C++ static_cast and dynamic_cast.
+
 
 Release 1.5.1
 Changes since 1.5.0
